# verity-guard

./: .gitignore  LICENSE  README.md  pyproject.toml
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: index.ts  payer.ts  vercel.ts
js/test/: fail-closed.test.mjs  payer.test.mjs
openclaw/: SKILL.md  license.txt
openclaw-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
openclaw-plugin/src/: index.ts
openclaw-plugin/test/: gate.test.mjs
openclaw/references/: catalog.md  enforcement.md
openclaw/scripts/: verity.py
src/verity_guard/: __init__.py  client.py  decorators.py  payer.py
src/verity_guard/integrations/: __init__.py  crewai.py  langchain.py  langgraph.py  openai_agents.py
tests/: test_client.py  test_fail_closed.py  test_format_verdict.py  test_openai_agents_adapter.py  test_payer.py
